# OpenGranola

./: .gitignore  CHANGELOG.md  Cargo.toml  ETHOS.md  LICENSE  README.md  UI_UX_Changes_Summary.md  appcast.xml  translate_to_swedish.py
.github/workflows/: mac-release.yml  package-smoke.yml  release-dmg.yml  release.yml  ui-smoke.yml  validate-swift.yml  windows-release.yml
Casks/: openoats.rb
OpenCassava/: Cargo.toml
OpenCassava/OpenCassavaTauri/src-tauri/: err.txt
OpenGranola/Sources/OpenGranola/: Info.plist
OpenOats/: Package.resolved  Package.swift
OpenOats/OpenOatsTauri/: package.json
OpenOats/OpenOatsTauri/src/: App.css  App.tsx  types.ts
OpenOats/OpenOatsTauri/src-tauri/: Cargo.toml  tauri.conf.json
OpenOats/OpenOatsTauri/src-tauri/src/: audio_windows.rs  engine.rs  lib.rs
OpenOats/Sources/OpenOats/: Info.plist  OpenOats.entitlements
OpenOats/Sources/OpenOatsMac/: Info.plist
OpenOats/Sources/OpenOatsWindows/: WindowsExports.swift
OpenOats/Tests/OpenOatsTests/: AppCoordinatorIntegrationTests.swift  AppSettingsLLMTests.swift  AppSettingsTests.swift  (+14 more)
UITests/OpenOatsUITests/: SmokeTests.swift
demo-kb-investor/due-diligence/: red-flags.md
demo-kb-investor/market-theses/: prior-auth-landscape.md
docs/: lm-studio-setup.md
docs/specs/: 2026-03-21-repo-policy-bot-design.md
opencassava/: README.md  package-lock.json  package.json
opencassava/scripts/: prepare-whisper.ps1
opencassava/src/: App.tsx  theme.ts  types.ts
opencassava/src-tauri/: Cargo.toml  tauri.conf.json
scripts/: build_swift_app.sh  make_dmg.sh  select_xcode_26.sh
(+161 files in other folders)
